Additions:

Changes:
Updated to use features from Fireplace Lib 3.0.4+
Updated logo

Fixes/Internal Changes: