@@ -1,4 +1,5 @@
 Additions:
+Added /gereload to reload config from the config file
 
 Changes:
 Updated to use features from Fireplace Lib 3.0.4+
